--- a/app/views/alert_logs/index.html.erb
+++ b/app/views/alert_logs/index.html.erb
@@ -12,6 +12,7 @@
   <tbody>
     <% @alert_logs.each do |alert_log| %>
       <tr>
+        <td><%= alert_log.message && JSON.parse(alert_log.message)["message"] %></td>
         <td><%= link_to 'Show', alert_log %></td>
         <td><%= link_to 'Edit', edit_alert_log_path(alert_log) %></td>
         <td><%= link_to 'Destroy', alert_log, method: :delete, data: { confirm: 'Are you sure?' } %></td>
