--- a/app/views/alert_logs/show.html.erb
+++ b/app/views/alert_logs/show.html.erb
@@ -1,4 +1,8 @@
 <p id="notice"><%= notice %></p>
 
+<div>
+<%= @alert_log.message %>
+</div>
+
 <%= link_to 'Edit', edit_alert_log_path(@alert_log) %> |
 <%= link_to 'Back', alert_logs_path %>
