feat: preety json

--- a/app/views/alert_logs/show.html.erb
+++ b/app/views/alert_logs/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <div>
-<%= @alert_log.message %>
+  <pre><%= @beautifiedJson %></pre>
 </div>
 
 <%= link_to 'Back', alert_logs_path %>
